--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -27,7 +27,11 @@ CFLAGS = -Wall -ffunction-sections -fno-builtin $(ARCH) $(COMMON) $(INCLUDES) $(
 ifdef Bootloader
 LDFLAGS = -nostartfiles -Wl,-Map=$(TARGET).map,--gc-sections,--entry=main,-Tscripts/arm-gcc-link-bootloader.ld $(ARCH) $(COMMONOC)
 else
+ifdef Bootloader3k
+LDFLAGS = -nostartfiles -Wl,-Map=$(TARGET).map,--gc-sections,--entry=main,-Tscripts/arm-gcc-link-bootloader3k.ld $(ARCH) $(COMMONOC)
+else
 LDFLAGS = -nostartfiles -Wl,-Map=$(TARGET).map,--gc-sections,--entry=main,-Tscripts/arm-gcc-link.ld $(ARCH) $(COMMON)
+endif
 endif
 $(TARGET).bin: $(TARGET).elf
 	$(OBJCP) -O binary $< $@
