Added "make clean-objects" to clean without recreating external sources

--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -60,8 +60,10 @@ prepare:
 flash: $(TARGET).bin
 	stm32flash -v -w $(TARGET).bin /dev/ttyUSB0
 
-clean:
+clean-objects:
 	rm -f $(OBJS) $(TARGET).{bin,elf,map}
+
+clean: clean-objects
 	rm -rf cmsis cmsis_boot irmp stm_lib usb_hid ext_src/prepared
 
 distclean: clean
