Added "SimpleCircuit" mode to drive power button directly

--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -40,6 +40,10 @@ else
 LDFLAGS = -nostartfiles -Wl,-Map=$(TARGET).map,--gc-sections,--entry=main,-Tscripts/arm-gcc-link.ld $(ARCH) $(COMMON)
 endif
 
+ifdef SimpleCircuit
+DEFINES += -DSimpleCircuit
+endif
+
 ifeq ($(Platform), Blue)
 DEFINES += -DBlueLink
 endif
