--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -46,6 +46,10 @@ ifdef SimpleCircuit
 DEFINES += -DSimpleCircuit
 endif
 
+ifdef OnlyPowerUp
+DEFINES += -DOnlyPowerUp -DSOF_CALLBACK
+endif
+
 ifeq ($(Platform), Blue)
 DEFINES += -DBlueLink
 endif
