--- a/STM32F103/Make.config.template
+++ b/STM32F103/Make.config.template
@@ -17,10 +17,11 @@
 
 ### If you enable the following option, your firmware will be able to drive the
 ### "active" pin of the mainboard power button directly. It is recommended
-### to add a 220 ohms resistor between the wakeup pin and the active pin of the
-### mainboard connector.
-### Please be careful and check it out, if this works for your motherboard, too.
-### Warning: This might possibly damage your motherboard or the IRMP_STM32 device!
+### to add a 1 kohms resistor between the wakeup pin and the active pin of the
+### mainboards power button connector. If your motherboard does not start with
+### 1 kohm, you could try lower values.
+### Check it out, if this works for your motherboard, too (it probably will).
+### Please be careful and don't damage your motherboard!
 ### Default is to build a firmware which is meant to drive the power button via
 ### an opto-coupler added between STM32 board and mainboard.
 #SimpleCircuit=1
