add icons.o to Makefile

--- a/stm32IRconfig_gui/Linux/Makefile
+++ b/stm32IRconfig_gui/Linux/Makefile
@@ -3,7 +3,7 @@ all: stm32IRconfig_gui
 CC=gcc
 CXX=g++
 COBJS=hid.o
-CPPOBJS=stm32IRconfig_gui.o
+CPPOBJS=stm32IRconfig_gui.o icons.o
 OBJS=$(COBJS) $(CPPOBJS)
 CFLAGS=-Wall -g -c `fox-config --cflags` `pkg-config libusb-1.0 --cflags`
 LIBS=-ludev -lrt -lpthread `fox-config --libs` `pkg-config libusb-1.0 --libs`
