backward compability, add hour and minute to firmware string

--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -49,7 +49,7 @@ DEFINES += -DSimpleCircuit
 TARGET := $(TARGET)_SC
 endif
 
-DATE := $(shell date +"%F")
+DATE := $(shell date +"%F_%H-%M")
 TARGET := $(DATE)_$(TARGET)
 
 DEFINES += -DFW_STR=\"$(TARGET)\"
