--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -53,7 +53,7 @@ DATE := $(shell date +"%F_%H-%M")
 TARGET := $(DATE)_$(TARGET)
 
 IRMP_VERSION := $(shell grep -e "Version IRMP" irmp/README.txt | awk '{print $$3}')
-DEFINES += -DFW_STR=\"$(TARGET)___IRMP_Version:_$(IRMP_VERSION)\"
+DEFINES += -DFW_STR=\"$(TARGET)___IRMP-Version:_$(IRMP_VERSION)\"
 #no blanks!
 
 ifdef Bootloader
