StickLink, map file really, adapted changes from @realglotzi, binaries for blueDev

--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -46,6 +46,10 @@ ifeq ($(Platform), Dev)
 DEFINES += -DDeveloperBoard
 TARGET = Dev
 endif
+ifeq ($(Platform), blueDev)
+DEFINES += -DBlueDeveloperBoard
+TARGET = blueDev
+endif
 ifeq ($(Platform), MapleMini)
 DEFINES += -DMapleMini
 TARGET = MapleMini
