--- a/STM32F103/Make.config.template
+++ b/STM32F103/Make.config.template
@@ -7,11 +7,13 @@
 ### Specify the target board here.
 ### Red --> Build for the "Red" ST-Link board or one of the ST-Link "USB-sticks"
 ### Blue --> Build for the "Blue" ST-Link board
-### Dev --> Build for the STM32F103 development board.
+### Dev --> Build for the classic STM32F103 development board
+### blueDev --> Build for the blue STM32F103 development board
 ### MapleMini --> Build for the Maple Mini board
 #Platform=Red
 #Platform=Blue
 #Platform=Dev
+#Platform=blueDev
 #Platform=MapleMini
 
 ### Enable this if your firmware is meant to run on a board with the Maple
