adapt to Maple Mini addon board, add Maple Mini linker script

--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -70,7 +70,11 @@ DEFINES += -DFW_STR=\"$(TARGET)___IRMP-Version:_$(IRMP_VERSION)\"
 ifdef Bootloader
 DEFINES += -DBootloader
 TARGET := $(TARGET)_BL
+ifneq ($(Platform), MapleMini)
 LDFLAGS = -nostartfiles -Wl,-Map=$(TARGET).map,--gc-sections,--entry=main,-Tscripts/arm-gcc-link-bootloader.ld $(ARCH) $(COMMON)
+else
+LDFLAGS = -nostartfiles -Wl,-Map=$(TARGET).map,--gc-sections,--entry=main,-Tscripts/arm-gcc-link-maple.ld $(ARCH) $(COMMON)
+endif
 else
 LDFLAGS = -nostartfiles -Wl,-Map=$(TARGET).map,--gc-sections,--entry=main,-Tscripts/arm-gcc-link.ld $(ARCH) $(COMMON)
 endif
