refine port defines, added black developer board, fast toggle for all boards, more bootloaders

--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -50,6 +50,10 @@ ifeq ($(Platform), blueDev)
 DEFINES += -DBlueDeveloperBoard
 TARGET = blueDev
 endif
+ifeq ($(Platform), blackDev)
+DEFINES += -DBlackDeveloperBoard
+TARGET = blackDev
+endif
 ifeq ($(Platform), MapleMini)
 DEFINES += -DMapleMini
 TARGET = MapleMini
