USB reset for F105, F105 binaries, ...

--- a/STM32F105/Makefile
+++ b/STM32F105/Makefile
@@ -35,6 +35,7 @@ CFLAGS = -Wall -ffunction-sections -fno-builtin $(ARCH) $(COMMON) $(INCLUDES) $(
 
 ifdef SimpleCircuit
 DEFINES += -DSimpleCircuit
+TARGET := $(TARGET)_SC
 endif
 
 DATE := $(shell date +"%F_%H-%M")
@@ -69,7 +70,7 @@ flash: $(TARGET).bin
 	stm32flash -v -w $(TARGET).bin /dev/ttyUSB0
 
 clean-objects:
-	rm -f $(OBJS) $(TARGET).{bin,elf,map}
+	rm -f $(OBJS) $(TARGET).{elf,map}
 
 clean: clean-objects
 	rm -rf cmsis cmsis_boot irmp stm_lib usb_hid ext_src/prepared
