--- a/stm32IRconfig_gui/Linux/Makefile
+++ b/stm32IRconfig_gui/Linux/Makefile
@@ -5,8 +5,8 @@ CXX=g++
 COBJS=hid.o
 CPPOBJS=stm32IRconfig_gui.o icons.o
 OBJS=$(COBJS) $(CPPOBJS)
-CFLAGS=-Wall -g -c `fox-config --cflags` `pkg-config libusb-1.0 --cflags`
-LIBS=-ludev -lrt -lpthread `fox-config --libs` `pkg-config libusb-1.0 --libs`
+CFLAGS=-Wall -g -c `fox-config --cflags`
+LIBS=-ludev -lrt `fox-config --libs`
 
 stm32IRconfig_gui: $(OBJS)
 	g++ -Wall -g $^ $(LIBS) -o stm32IRconfig_gui
