--- a/STM32F103/Make.config.template
+++ b/STM32F103/Make.config.template
@@ -15,6 +15,8 @@
 ### MapleMini --> Build for the Maple Mini board
 ### MapleMini_2k --> Build for the Maple Mini board with bootloader jumping to
 ###    2k offset (default for Maple Mini is 5k)
+### MapleMini_2k_ExtBd --> Build for the Maple Mini board with bootloader jumping to
+###    2k offset (default for Maple Mini is 5k) and the extension board
 #Platform=Red
 #Platform=Blue
 #Platform=Stick
