added green ST-Link

--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -52,6 +52,10 @@ ifeq ($(Platform), Stick)
 DEFINES += -DStickLink
 TARGET = Stick
 endif
+ifeq ($(Platform), Green)
+DEFINES += -DGreenLink
+TARGET = Green
+endif
 ifeq ($(Platform), Dev)
 DEFINES += -DDeveloperBoard
 TARGET = Dev
