--- a/STM32F103/Make.config.template
+++ b/STM32F103/Make.config.template
@@ -8,6 +8,7 @@
 ### Red --> Build for the "Red" ST-Link board or a ST-Link USB stick with two LEDs
 ### Blue --> Build for the "Blue" ST-Link board
 ### Stick --> Build for the ST-Link USB stick with only one LED
+### Green --> Build for the green ST-Link USB stick with only one LED
 ### Dev --> Build for the classic STM32F103 development board
 ### blueDev --> Build for the blue STM32F103 development board
 ### blackDev --> Build for the black STM32F103 development board
@@ -21,6 +22,7 @@
 #Platform=Red
 #Platform=Blue
 #Platform=Stick
+#Platform=Green
 #Platform=Dev
 #Platform=blueDev
 #Platform=blackDev
