add ST-Link USB stick with unconnected PB11, fix typo, transfer to F105

--- a/STM32F103/Makefile
+++ b/STM32F103/Makefile
@@ -48,6 +48,10 @@ ifeq ($(Platform), Red)
 DEFINES += -DRedLink
 TARGET = Red
 endif
+ifeq ($(Platform), RedCrap)
+DEFINES += -DRedLinkCrap
+TARGET = RedCrap
+endif
 ifeq ($(Platform), Stick)
 DEFINES += -DStickLink
 TARGET = Stick
