--- a/STM32F103/Make.config.template
+++ b/STM32F103/Make.config.template
@@ -6,6 +6,7 @@
 
 ### Specify the target board here.
 ### Red --> Build for the "Red" ST-Link board or a ST-Link USB stick with two LEDs
+### RedCrap --> Build for the ST-Link USB stick with unconnected PB11 and with two LEDs
 ### Blue --> Build for the "Blue" ST-Link board
 ### Stick --> Build for the ST-Link USB stick with only one LED
 ### Green --> Build for the green ST-Link USB stick with only one LED
