--- a/STM32F105/Makefile
+++ b/STM32F105/Makefile
@@ -15,6 +15,9 @@ OBJCP = $(CROSS_COMPILE)objcopy
 ARCH = -mcpu=cortex-m3 -mthumb
 COMMON = -g -Os -flto
 INCLUDES = -Icmsis -Icmsis_boot -Istm_lib/inc -Iusb_hid/inc -Iirmp -Isrc
+ifdef DEBUG
+INCLUDES += -Isemihosting -Istdio
+endif
 DEFINES = -D$(PLATFORM) -DSTM32F10X_CL -DUSE_STDPERIPH_DRIVER
 
 OBJS = src/irmpmain.o src/st_link_leds.o src/usb_hid.o src/main.o\
@@ -30,6 +33,9 @@ OBJS = src/irmpmain.o src/st_link_leds.o src/usb_hid.o src/main.o\
        usb_hid/src/usbd_desc.o\
        usb_hid/src/usbd_hid_core.o usb_hid/src/usbd_ioreq.o\
        usb_hid/src/usbd_req.o usb_hid/src/usbd_usr.o\
+ifdef DEBUG
+OBJS += semihosting/semihosting.o semihosting/sh_cmd.o  stdio/printf.o
+endif
 
 CFLAGS = -Wall -ffunction-sections -fno-builtin $(ARCH) $(COMMON) $(INCLUDES) $(DEFINES)
 
@@ -51,6 +57,11 @@ LDFLAGS += --specs=nano.specs
 ifdef SimpleCircuit_F105
 DEFINES += -DSimpleCircuit_F105
 TARGET := $(TARGET)_SC
+endif
+
+ifdef DEBUG
+DEFINES += -DDEBUG
+TARGET := $(TARGET)_DBG
 endif
 
 COMPILED_BY = jrie
