--- a/stm32IRconfig_gui/Windows/Makefile
+++ b/stm32IRconfig_gui/Windows/Makefile
@@ -6,15 +6,15 @@ COBJS=hid.o
 CPPOBJS=stm32IRconfig_gui.o icons.o upgrade.o stm32mem.o dfu.o
 OBJS=$(COBJS) $(CPPOBJS)
 ifeq ($(MSYSTEM),MINGW32)
-CFLAGS=-I/mingw32/include/fox-1.6 -I/mingw64/include/libusb-1.0 -g -c -s -Wall -O0 -MD -mno-ms-bitfields
+CFLAGS=-I/mingw32/include/fox-1.6 -I/mingw64/include/libusb-1.0 -g -c -s -Wall  -mno-ms-bitfields
 # -static
 LIBS= -mwindows -Wl,-Bstatic -lFOX-1.6 -lpng -ljpeg -ltiff -lz -llzma -lws2_32 -lgdi32 -static-libgcc -static-libstdc++ -lkernel32 -lsetupapi -lusb-1.0
 else ifeq ($(MSYSTEM),MINGW64)
-CFLAGS=-I/mingw64/include/fox-1.6 -I/mingw64/include/libusb-1.0 -g -c -s -Wall -O0 -MD -mno-ms-bitfields
+CFLAGS=-I/mingw64/include/fox-1.6 -I/mingw64/include/libusb-1.0 -g -c -s -Wall  -mno-ms-bitfields
 # -static
-LIBS= -mwindows -Wl,-Bstatic -lFOX-1.6 -lpng -ljpeg -ltiff -lz -llzma -lws2_32 -lgdi32 -static-libgcc -static-libstdc++ -lkernel32 -lsetupapi -lusb-1.0
+LIBS= -mwindows -Wl,-Bstatic -lFOX-1.6 -lpng -ljpeg -ltiff -lz -lzstd -llzma -lws2_32 -lgdi32 -static-libgcc -static-libstdc++ -lkernel32 -lsetupapi -lusb-1.0
 endif
-CXXFLAGS= -g -s -Wall -O0 -MD -mno-ms-bitfields
+CXXFLAGS=-g -s -Wall  -mno-ms-bitfields
 # -static // causes timing problems, libwinpthread-1.dll is needed
 
 stm32IRconfig_gui: $(OBJS)
